# atlas

./: .dockerignore  .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
atlas/agents/: base.py  rag_agent.py  react_agent.py
atlas/api/: __init__.py  app.py  auth.py  routes.py  schemas.py  server.py
atlas/assets/: __init__.py  repository.py  service.py
atlas/browser/: __init__.py  browser.py
atlas/capabilities/: __init__.py  contracts.py
atlas/career/: __init__.py  decision_rule.py
atlas/cli/: __init__.py  main.py
atlas/code/: __init__.py  graph.py  languages.py  models.py  parser.py  patterns.py  pyast.py  repomap.py  service.py  treesitter.py
atlas/config/: __init__.py  manager.py
atlas/configuration/: __init__.py  repository.py  schemas.py  service.py
atlas/conversation/: __init__.py  service.py
atlas/core/: __init__.py
atlas/database/: __init__.py  cli.py  connection.py  migrations.py
atlas/decision/: __init__.py  approvals.py  context.py  contracts.py  engine.py  rules.py
atlas/documents/: __init__.py  service.py
atlas/engineering/: __init__.py  architecture.py  artifacts.py  design_review.py  findings.py  ingest.py  readers.py
atlas/eval/: __init__.py  baseline.py  benchmark.py  contracts.py  fixtures.py  lifecycle.py  metrics.py  retrieval.py  synthesis.py
atlas/events/: __init__.py  dispatcher.py  event.py  handlers.py  subscriptions.py
atlas/evidence/: __init__.py  models.py
atlas/exceptions/: __init__.py  agent.py  (+6 more)
config/: defaults.yaml
database/: README.md
deploy/: atlas.env.example
docs/: ATLAS_OS_ROADMAP.md  IMPLEMENTATION_PLAN.md  MEDIA_ACQUISITION_PLAN.md  MEDIA_BROWSER_ACQUISITION_PLAN.md  MEDIA_ORCHESTRATION_PLAN.md  MEDIA_REPORT_HONESTY_AMENDMENT.md  MEDIA_REPORT_HONESTY_PLAN.md  MISSIONS_OPERATOR_GUIDE.md  OPEN_ITEMS.md  PHASE_0_PLAN.md  PHASE_A_PLAN.md  PHASE_B_PLAN.md  PHASE_C_PLAN.md  PHASE_D_PLAN.md  STAGE_2_PLAN.md  STAGE_3B_PLAN.md  STAGE_3_2_PLAN.md  STAGE_3_PLAN.md  computer_details.txt  eval_baselines.md  initial_plan.txt  notes.txt  stage-2.txt
scripts/: accept_s10.py  restore.sh
tests/: test_access_layer.py  test_acquire.py  test_acquire_32a.py  test_acquisition_m1.py  test_advisory_decision_rule.py  test_advisory_feed_reader.py  test_agents.py  test_api.py  test_approval_repo.py  test_approvals.py  test_arbiter.py  test_asset_groups_db.py  test_assets.py  test_assistant.py  test_browser.py  test_browser_captions_ba1.py  test_capabilities.py  test_cli.py  test_clock.py  test_code_graph.py  test_code_parser.py  test_code_patterns.py  test_code_repomap.py  test_code_service.py  test_code_treesitter.py  test_concurrency_32b.py  test_config.py  test_configuration.py  test_consolidator_evidence.py  test_consolidator_nn.py  test_conversation.py  test_coverage_service.py  test_decision_composition.py  test_decision_engine.py  test_decision_repo.py  test_documents.py  test_download.py  test_downloader.py  test_engineering_architecture.py  test_engineering_design_review.py  (+127 more)
(+307 files in other folders)
