[project]
name = "atlas"
version = "0.1.0"
description = "Personal knowledge-centric AI agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "pypdf>=6.14.2",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
atlas = "atlas.cli.main:main"
atlas-db = "atlas.database.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
